# troth

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  lexer.rs  main.rs  parser.rs  reducer.rs  stdlib.rs  test.rs  token_handler.rs  transpiler.rs  type_system.rs  visualizer.rs
stdlib/: arithmetic.lc  bool.lc
tests/: arithmatic.lc  arithmetic.lc  bool.lc  bool_logic.lc  id_reduct.lc  if_else.lc  lambda_reduct.lc  use_statement.lc  y_combinator.lc
